--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ steps:
   commands:
   - git fetch --tags
   - python setup.py install
-  - python scripts/tests.py
+  - python tests.py
   when:
     event:
       - cron
