--- a/.drone.yml
+++ b/.drone.yml
@@ -33,4 +33,4 @@ steps:
     password:
       from_secret: email_password
     from: technical@dessia.tech
-    recipients: [ root@dessia.tech ]
+    recipients: [ younes.belabid@dessia.io, ringhausen@dessia.io ]
